--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,21 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        build_gradle = '3.6.3'
+        kotlin_version = '1.3.71'
+        aspectjx = '2.0.8'
+    }
     repositories {
         google()
         jcenter()
-        
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
-        
+        classpath "com.android.tools.build:gradle:$build_gradle"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-        classpath 'com.hujiang.aspectjx:gradle-android-plugin-aspectjx:2.0.6'
+        classpath "com.hujiang.aspectjx:gradle-android-plugin-aspectjx:$aspectjx"
     }
 }
 
